# desktop-thingies

./: .gitignore  README.md  pyproject.toml  reimu_fumo.png~  run
desktop_thingies/: __init__.py  __main__.py  client.py  constants.py  physics_object.py
examples/: boxes_and_balls.py  config.py
